--- a/arduino.html
+++ b/arduino.html
@@ -72,8 +72,17 @@
                 </ol>
  
                 <div class="d-flex align-items-center">
-                  <button type="submit" class=" mx-auto border border-1 rounded-pill " id="gi" onmouseover="document.getElementById('gi').style.backgroundColor='crimson'" onmouseout="document.getElementById('gi').style.backgroundColor='rgba(6, 12, 34, 0.76)'"
-                  style="color: white; background-color:rgba(6, 12, 34, 0.76); padding: 8px; ">Register</button>
+                  <button
+                  type="submit"
+                  class="mx-auto border border-1 rounded-pill"
+                  id="gi"
+                  onmouseover="document.getElementById('gi').style.backgroundColor='crimson'"
+                  onmouseout="document.getElementById('gi').style.backgroundColor='rgba(6, 12, 34, 0.76)'"
+                  style="color: white; background-color:rgba(6, 12, 34, 0.76); padding: 8px;"
+                  onclick="myFunction()"
+                >
+                  Register
+                </button>
                 </div>
               </div>
             </div>
