--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="hero-container" data-aos="zoom-in" data-aos-delay="100">
       <h1 class="mb-4 pb-0"><span>Nomizo'<SUB>24</SUB></span><br> 2024 </h1>
       <p class="mb-4 pb-0">DEPARTMENT OF ELECTRONICS AND INSTRUMENTATION ENGINEERING <br>&<br>EIE ASSOCIATION</p>
-      <a href="../img/video.mp4" class="glightbox play-btn mb-4"></a>
+      <a href="EIE.mp4" class="glightbox play-btn mb-4"></a>
       <p id="time"></p>
       <p><strong>EACH EVENT HAS 3 PRICES(CERTIFICATE WITH CASH_PRICE) -JUST FOR RS.250</strong></p>
       <p><strong>ARDUINO Workshop FOR SCHOOL STUDENTS(+1 & +2) -JUST FOR RS.150</strong></p>
