--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     class="img-fluid"
                   />
                   <div class="details">
-                    <p style="font-size:0.8cm; font-weight: 400;">Papyrus</p>
+                    <p style="font-size:0.8cm; font-weight: 400;">Idea Ignite</p>
                     <p>Paper Presentation</p>
                     <div class="mb-2">
                       <a
@@ -210,7 +210,7 @@
                     class="img-fluid"
                   />
                   <div class="details">
-                    <p style="font-size:0.8cm; font-weight: 400;">Hugs for bugs</p>
+                    <p style="font-size:0.8cm; font-weight: 400;">Debug Detective</p>
                     <p>Code Debugging</p>
                     <div class="mb-2">
                       <a
@@ -237,7 +237,7 @@
                     class="img-fluid"
                   />
                   <div class="details">
-                    <p style="font-size:0.8cm; font-weight: 400;">Soccer Superme</p>
+                    <p style="font-size:0.8cm; font-weight: 400;">Robo Striokerz</p>
                     <p>Robo Soccer</p>
                     <div class="mb-2">
                       <a
@@ -269,8 +269,8 @@
                     alt="Speaker 5"
                     class="img-fluid"
                   />
-                  <div class="details">
-                    <p style="font-size:0.8cm; font-weight: 400;">The Instant</p>
+                  <div class="details"> 
+                    <p style="font-size:0.8cm; font-weight: 400;">Snap Showcase</p>
                     <p>Photography Contest</p>
                     <div class="mb-2">
                       <a
@@ -303,8 +303,8 @@
                     class="img-fluid"
                   />
                   <div class="details">
-                    <p style="font-size:0.8cm; font-weight: 400;">Arduino-Workshop</p>
-                    <p>Arduino-Workshop</p>
+                    <p style="font-size:0.8cm; font-weight: 400;">Arduino-Adventure</p>
+                   <p>Arduino Workshop</p>
                     <div class="mb-2">
                       <a
                         class="border border-2 rounded-pill"
@@ -533,7 +533,7 @@
           style="font-size: 4.5mm;" target="_blank"><strong>Chandrakanth | Abishek | Priya</strong></a>
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a href="https://github.com/Chan-prakash/nomizo/settings/pages" class="twitter mx-2" target="_blank"><i class="bi bi-github"></i></a>
+        <a href="https://github.com/Chan-prakash/" class="twitter mx-2" target="_blank"><i class="bi bi-github"></i></a>
         <a href="https://wa.me/918838984850" class="facebook mx-2" target="_blank"><i class="bi bi-whatsapp"></i></a>
         <a href="" class="instagram mx-2" target="_blank"><i
             class="bi bi-instagram"></i></a>
