--- a/index.html
+++ b/index.html
@@ -82,8 +82,11 @@
       <h1 class="mb-4 pb-0"><span>Nomizo'<SUB>24</SUB></span><br> 2024 </h1>
       <p class="mb-4 pb-0">DEPARTMENT OF ELECTRONICS AND INSTRUMENTATION ENGINEERING <br></p>
       <a href="https://youtu.be/iMfZUTxbdvQ" class="glightbox play-btn mb-4" type="_blank"></a>
-      <p id="time"></p>
-      <p><strong>EACH EVENT HAS 3 PRICES(CERTIFICATE WITH CASH_PRICE) -JUST FOR RS.250</strong></p>
+      <div id="timer">
+        <img src="timer.gif" alt="Timer logo">
+        <p id="time"></p>
+      </div>      
+      <p><strong>EACH EVENT HAS CERTIFICATE WITH CASH_PRICE -JUST FOR RS.250</strong></p>
       <p><strong>ARDUINO Workshop FOR SCHOOL STUDENTS(+1 & +2) -JUST FOR RS.150</strong></p>
       <p>On Spot Registration Opens</p>
       <a href="#about" class="about-btn scrollto">About The Event</a>
@@ -97,7 +100,7 @@
       <div class="container" data-aos="fade-up">
         <div class="row">
           <div class="col-lg-6">
-            <h2>ABOUT  SRM </h2>
+            <h2>ABOUT SRM </h2>
             <p align="justify">SRM Institute of Science and Technology  is one of the top ranking universities in India with over 52,000 full time students and more than 3200 faculty across all the campuses – Kattankulathur, Ramapuram, Vadapalani Campus – all in and around Chennai, Tiruchirappalli (in TN), Modinagar (in UP) & Sonepat (in Haryana) – both of which are located near Delhi NCR, Amaravati (in AP), Gangtok (in Sikkim) – offering a wide range of undergraduate, postgraduate and doctoral programs in six Faculties – Engineering & Technology, Management, Medicine & Health sciences, Science & Humanities, Law and Agricultural Sciences.</p>
 
             <h2>About The Department</h2>        
@@ -156,6 +159,7 @@
           <li class="nav-item">
             <a
               class="nav-link"
+              id="work"
               href="#day-3"
               role="tab"
               data-bs-toggle="tab"
@@ -344,7 +348,7 @@
           <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-1">
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>09:30 AM</time></div>
+              <div class="col-md-2"><time>DAY1/09:30 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="inaugration.jpeg" alt="paper ">
@@ -357,7 +361,7 @@
 
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>10:00 AM</time></div>
+              <div class="col-md-2"><time> DAY1/10:00 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="paper_event1.png"alt="Paper wrapper">
@@ -368,7 +372,7 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>1.00 PM</time></div>
+              <div class="col-md-2"><time>DAY1/1.00 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="CODE_EVENT1.png" alt="Hugs for Bugs">
@@ -379,7 +383,7 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>9.30 AM</time></div>
+              <div class="col-md-2"><time> DAY2/9.30 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="arduiono_event1.png" alt="chamber of bids">
@@ -390,7 +394,7 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>10.30 AM</time></div>
+              <div class="col-md-2"><time>DAY2/10.30 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="robo socccer-1.jpeg" alt="Robo Striokerz">
@@ -401,7 +405,7 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>01:00 PM</time></div>
+              <div class="col-md-2"><time>DAY2/01:00 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="photo_event1.png" alt="the instant">
@@ -413,7 +417,7 @@
          
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>03:00 PM</time></div>
+              <div class="col-md-2"><time>DAY2/03:00 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="Valedictory.jpeg" alt="the instant">
@@ -445,11 +449,8 @@
 
         <div class="row g-0">
           <div class="col-lg-6 venue-map">
-            <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d486.2948629785101!2d80.03921964354666!3d12.820068949564872!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a52f70269d993c5%3A0x700fbdcc379ab2aa!2sFaraday%20hall!5e0!3m2!1sen!2sin!4v1723552158112!5m2!1sen!2sin"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade">
-          </iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2456.611684535559!2d80.03860421168831!3d12.820640700622665!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a52f76ce9323d11%3A0x8a58b4c6ff987b6b!2sSRM%20Hitech%20Block!5e0!3m2!1sen!2sin!4v1724430132001!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
         </div>
 
         <!-- Text Section -->
