--- a/arduino.html
+++ b/arduino.html
@@ -56,19 +56,22 @@
   
           <div class="row">
             <div class="col-md-6">
-              <img src="paper presentation.jpg" alt="paperwrapper" class="img-fluid" />
+              <img src="arduino.png" alt="paperwrapper" class="img-fluid" />
             </div>
   
             <div class="col-md-6">
               <div class="details">
                 <h3> Instructions for Workshop</h3> 
-                <li><strong>If you are registering for Workshop ,you will be engaged in the workshop for the  whole day .Kindly avoid to register in Technical and Non-Technical Events</strong><br>
-                  <li>Participants are advised to bring their own laptops (preferably not a
-                    MacBook).<br>
+              <ol>
+                <li>
+                  <strong>If you are registering for Workshop ,you will be engaged in the workshop for the 3Hrs .</strong><br>
+                </li>
+                  <li> For Participants we will provide<br>
+                  </li>
                     <li>Please ensure that the ARDUINO IDE software is installed on your laptop
-                      before the workshop.
+                      before the workshop.</li>
                       <br>
-                        <li>Certificates will be awarded to all participants.
+                        <li>Certificates will be awarded to all participants.</li>
                 </ol>
  
                 <div class="d-flex align-items-center">
