--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <p align="justify">NOMIZO'24 is an exciting national-level symposium hosted by the Department of Electronics and Instrumentation at SRM Institute of Science and Technology, Kattankulathur. Scheduled for the 29th and 30th of August, this two-day event offers a dynamic mix of innovation and hands-on learning, with key events including a Robot Soccer competition, Research Paper Presentations, a challenging Code Debugging contest, and inventive Arduino projects. We, the Department of Electronics and Instrumentation Engineering at SRMIST Kattankulathur, warmly invite participants from across the nation to join us in this stimulating and competitive environment.</p>
             <h2>Registration Details</h2>
             <p>Registration fee for technical and non-technical event will be 250/-per person. <br>
-            <strong>For Queries:</strong><br>Chandrkanth.P - +91 88389 84850 <br>Abishek .D - +91 98439 04979 <br> Priya A - +91 97910 35386 </p>
+            <strong>For Queries:</strong><br>Chandrakanth.P - +91 88389 84850 <br>Abishek .D - +91 98439 04979 <br> Priya A - +91 97910 35386 </p>
           </div>
           
           <div class="col-lg-3">
